objects/ASI_KOR_POSM_Product__c.object
<CustomObject>
    <fields>
        <fullName>ASI_KOR_Annual_Volume_Estimation__c</fullName>
        <label>Annual Volume Estimation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_Guide_Unit_Cost__c</fullName>
        <label>Guide Unit Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Item_Code__c</fullName>
        <externalId>true</externalId>
        <label>Item Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_KOR_Item_Name_Kor__c</fullName>
        <label>Item Name (Kor)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_KOR_Sub_Brand__c</referenceTo>
        <relationshipLabel>POSM Products</relationshipLabel>
        <relationshipName>POSM_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Banner</fullName>
                </value>
                <value>
                    <fullName>Lighter</fullName>
                </value>
                <value>
                    <fullName>Mat</fullName>
                </value>
                <value>
                    <fullName>Menu</fullName>
                </value>
                <value>
                    <fullName>Table Tent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_UOM__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_Unit_Case__c</fullName>
        <label>Unit Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Already_Used__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Already Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Available_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Available Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Brand__c</fullName>
        <formula>ASI_MFM_Sub_Brand__r.ASI_MFM_Brand__r.ASI_MFM_Brand_Code__c</formula>
        <label>MFM Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Competitor_Brand__c</fullName>
        <label>Competitor Brand</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IP</fullName>
                </value>
                <value>
                    <fullName>WS</fullName>
                </value>
                <value>
                    <fullName>GB</fullName>
                </value>
                <value>
                    <fullName>SB</fullName>
                </value>
                <value>
                    <fullName>JW</fullName>
                </value>
                <value>
                    <fullName>JW Blue</fullName>
                </value>
                <value>
                    <fullName>SM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Item_Category__c</fullName>
        <label>Item Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Trade MKT</fullName>
                </value>
                <value>
                    <fullName>Brand MKT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Item_Name__c</fullName>
        <label>Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Product_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>POSM_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>POSM Products</relationshipLabel>
        <relationshipName>POSM_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_UnitCost__c</fullName>
        <label>UnitCost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Unit_Cost_Currency__c</fullName>
        <label>Unit Cost Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KRW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Vender_Email_address__c</fullName>
        <label>Vender Email address</label>
        <type>Email</type>
    </fields>
    <label>POSM Product</label>
    <listViews>
        <fullName>ASI_CRM_KR_All_Bar_Styling</fullName>
        <columns>ASI_KOR_Item_Code__c</columns>
        <columns>NAME</columns>
        <columns>ASI_KOR_Fiscal_Year__c</columns>
        <columns>ASI_KOR_Sub_brand__c</columns>
        <columns>ASI_KOR_Guide_Unit_Cost__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_KOR_POSM_Product__c.ASI_KOR_Bar_Styling_Item</value>
        </filters>
        <label>All KR Bar-Styling</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_KOR</roleAndSubordinates>
            <roleAndSubordinates>ASI_KOR_I_T_Admin</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_KOR_Brand_POSM_Products</fullName>
        <columns>ASI_MFM_Brand__c</columns>
        <columns>ASI_MFM_Sub_Brand__c</columns>
        <columns>NAME</columns>
        <columns>ASI_KOR_Item_Name_Kor__c</columns>
        <columns>ASI_KOR_Item_Code__c</columns>
        <columns>ASI_KOR_Type__c</columns>
        <columns>ASI_MFM_Item_Category__c</columns>
        <columns>ASI_MFM_Product_Owner__c</columns>
        <columns>ASI_MFM_Vender_Email_address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_KOR_POSM_Product__c.ASI_KOR_POSM_Product</value>
        </filters>
        <filters>
            <field>ASI_MFM_Item_Category__c</field>
            <operation>equals</operation>
            <value>Brand MKT</value>
        </filters>
        <label>All Brand POSM Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_KOR_Trade_POSM_Products</fullName>
        <columns>ASI_MFM_Brand__c</columns>
        <columns>ASI_MFM_Vender_Email_address__c</columns>
        <columns>ASI_MFM_Sub_Brand__c</columns>
        <columns>NAME</columns>
        <columns>ASI_KOR_Item_Name_Kor__c</columns>
        <columns>ASI_KOR_Item_Code__c</columns>
        <columns>ASI_KOR_Type__c</columns>
        <columns>ASI_MFM_Item_Category__c</columns>
        <columns>ASI_MFM_Product_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_KOR_POSM_Product__c.ASI_KOR_POSM_Product</value>
        </filters>
        <filters>
            <field>ASI_MFM_Item_Category__c</field>
            <operation>equals</operation>
            <value>Trade MKT</value>
        </filters>
        <label>All Trade POSM Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>ASI_MFM_Brand__c</columns>
        <columns>ASI_MFM_Sub_Brand__c</columns>
        <columns>NAME</columns>
        <columns>ASI_KOR_Item_Name_Kor__c</columns>
        <columns>ASI_KOR_Item_Code__c</columns>
        <columns>ASI_KOR_Type__c</columns>
        <columns>ASI_MFM_Item_Category__c</columns>
        <columns>ASI_MFM_Product_Owner__c</columns>
        <columns>ASI_MFM_Vender_Email_address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_KOR_POSM_Product__c.ASI_KOR_POSM_Product</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_KR_Bar_Styling_FY1920</fullName>
        <columns>ASI_KOR_Fiscal_Year__c</columns>
        <columns>ASI_KOR_Item_Code__c</columns>
        <columns>ASI_KOR_Sub_brand__c</columns>
        <columns>NAME</columns>
        <columns>ASI_KOR_Guide_Unit_Cost__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_KOR_POSM_Product__c.ASI_KOR_Bar_Styling_Item</value>
        </filters>
        <filters>
            <field>ASI_KOR_Fiscal_Year__c</field>
            <operation>equals</operation>
            <value>FY1920</value>
        </filters>
        <label>All KR Bar-Styling_FY1920</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_KOR</roleAndSubordinates>
            <roleAndSubordinates>ASI_KOR_I_T_Admin</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>by_Brand_ABS</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Item_Name_Kor__c</columns>
        <columns>ASI_KOR_Type__c</columns>
        <columns>ASI_KOR_Item_Code__c</columns>
        <columns>ASI_KOR_Unit_Case__c</columns>
        <filterScope>Everything</filterScope>
        <label>by Brand ABS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>by_Brand_BA4</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Item_Name_Kor__c</columns>
        <columns>ASI_KOR_Type__c</columns>
        <columns>ASI_KOR_Item_Code__c</columns>
        <columns>ASI_KOR_UOM__c</columns>
        <filterScope>Everything</filterScope>
        <label>by Brand BA4</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>by_Brand_IP2</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Item_Name_Kor__c</columns>
        <columns>ASI_KOR_Type__c</columns>
        <columns>ASI_KOR_Item_Code__c</columns>
        <columns>ASI_KOR_Unit_Case__c</columns>
        <filterScope>Everything</filterScope>
        <label>by Brand IP2</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>by_Brand_IP4</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Item_Name_Kor__c</columns>
        <columns>ASI_KOR_Type__c</columns>
        <columns>ASI_KOR_Item_Code__c</columns>
        <columns>ASI_KOR_Unit_Case__c</columns>
        <filterScope>Everything</filterScope>
        <label>by Brand IP4</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>by_Brand_MUM</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Item_Name_Kor__c</columns>
        <columns>ASI_KOR_Type__c</columns>
        <columns>ASI_KOR_Item_Code__c</columns>
        <columns>ASI_KOR_Unit_Case__c</columns>
        <filterScope>Everything</filterScope>
        <label>by Brand MUM</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>by_Brand_NJC</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Item_Name_Kor__c</columns>
        <columns>ASI_KOR_Type__c</columns>
        <columns>ASI_KOR_Item_Code__c</columns>
        <columns>ASI_KOR_Unit_Case__c</columns>
        <filterScope>Everything</filterScope>
        <label>by Brand NJC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>by_Brand_NPJ</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Item_Name_Kor__c</columns>
        <columns>ASI_KOR_Type__c</columns>
        <columns>ASI_KOR_Item_Code__c</columns>
        <columns>ASI_KOR_Unit_Case__c</columns>
        <filterScope>Everything</filterScope>
        <label>by Brand NPJ</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>by_Brand_NWY</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Item_Name_Kor__c</columns>
        <columns>ASI_KOR_Type__c</columns>
        <columns>ASI_KOR_Item_Code__c</columns>
        <columns>ASI_KOR_Unit_Case__c</columns>
        <filterScope>Everything</filterScope>
        <label>by Brand NWY</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>by_Brand_OJC</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Item_Name_Kor__c</columns>
        <columns>ASI_KOR_Type__c</columns>
        <columns>ASI_KOR_Item_Code__c</columns>
        <columns>ASI_KOR_Unit_Case__c</columns>
        <filterScope>Everything</filterScope>
        <label>by Brand OJC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>by_Brand_TG2</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Item_Name_Kor__c</columns>
        <columns>ASI_KOR_Type__c</columns>
        <columns>ASI_KOR_Item_Code__c</columns>
        <columns>ASI_KOR_Unit_Case__c</columns>
        <filterScope>Everything</filterScope>
        <label>by Brand TG2</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>POSM Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POSM Products</pluralLabel>
    <recordTypes>
        <fullName>ASI_KOR_Bar_Styling_Item</fullName>
        <active>true</active>
        <label>KOR Bar-Styling Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_KOR_POSM_Product</fullName>
        <active>true</active>
        <label>KOR POSM Product</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>ASI_KOR_ValidateFiscalYear</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
 RecordType.DeveloperName = &apos;ASI_KOR_Bar_Styling_Item&apos;, 
 ((LEFT(ASI_KOR_Fiscal_Year__c, 2)) &lt;&gt; &apos;FY&apos;) 
 || NOT(
	VALUE(RIGHT(TEXT((VALUE(LEFT(RIGHT(ASI_KOR_Fiscal_Year__c, 4), 2)) +1)), 2)) = VALUE((RIGHT(ASI_KOR_Fiscal_Year__c, 2)))
	)
)</errorConditionFormula>
        <errorDisplayField>ASI_KOR_Fiscal_Year__c</errorDisplayField>
        <errorMessage>Invalid Fiscal Year Format</errorMessage>
    </validationRules>
</CustomObject>